# ByBit-bot

./: .gitignore  CMakeLists.txt  README.md  execution.linear.json  order.linear.json  parameters.json  position.linear.json  wallet.json
src/: BotBase.cpp  BotBase.h  ByBit.cpp  ByBit.h  Encryption.hpp  Strategy.h  Strategy.hpp  main.cpp  utility_functions.cpp  utility_functions.h
